# simple-auth-server

./: Cargo.toml
migrations/2022-04-17-224652_users/: up.sql
migrations/2022-04-17-224700_invitations/: up.sql
src/: main.rs  models.rs
