[package]
name = "simple-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.4.0"
actix-web = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
rust-argon2 = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sparkpost = "0.5.4"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
time = "0.3.9"
